Kubernetes/kustomize/base/servicemesh/tunnel.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: istio-system
  labels:
    app: cloudtunnel
  name: cloudtunnel
spec:
  selector:
    matchLabels:
      app: cloudtunnel
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudtunnel
        network-policy: tunnel
    spec:
      # https://stackoverflow.com/questions/49368047/what-is-the-equivalent-for-depends-on-in-kubernetes
      containers: 
        - name: tunnel
          image: cloudflare/cloudflared:latest
          imagePullPolicy: "Always"
          args: 
            - tunnel
            - run
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
            limits:
              cpu: 200m
              memory: 512M 
      restartPolicy: Always
      serviceAccount: cloudtunnel
