Kubernetes/kustomize/base/servicemesh/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
      hosts:
        - "media/*.homelab.ezequielvalencia.com"
        - monitoring/*.homelab.ezequielvalencia.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: media-certs # Same name as secret 
      hosts:
        - "media/*.homelab.ezequielvalencia.com"
        - monitoring/*.homelab.ezequielvalencia.com
