Kubernetes/kustomize/base/servicemesh/monitor-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  hosts:
  - grafana.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 80

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: semaphore-route
  namespace: monitoring
spec:
  hosts:
  - semaphore.homelab.ezequielvalencia.com
  gateways:
  - istio-system/homelab-gateway
  http:
  - route:
    - destination:
        host: semaphoreui
        port:
          number: 3000
